--- a/frontend-discussions.html
+++ b/frontend-discussions.html
@@ -107,7 +107,7 @@
 
 
     <nav class="main-header">
-      <span class="channel-name"> <span class="hash">#</span> off-topic-discussions</span>
+      <span class="channel-name"> <span class="hash">#</span> frontend-discussions</span>
       <i class="fa-solid fa-pen-to-square"><span class="tooltip">Threads</span></i>
       <i class="fa-solid fa-bell"><span class="tooltip">Notification Settings</span></i>
       <i class="fa-solid fa-thumbtack"><span class="tooltip">Pinned Messages</span></i>
@@ -129,8 +129,8 @@
 
           <div class="chat-header">
             <div class="chat-hash">#</div>
-            <p class="chat-title">Welcome to #off-topic-discussions!</p>
-            <p class="chat-desc">This is the start of #off-topic-discussions channel.</p>
+            <p class="chat-title">Welcome to #frontend-discussions!</p>
+            <p class="chat-desc">This is the start of #frontend-discussions channel.</p>
           </div>
 
 
