--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <div class="note">
     <div>
       <p class="note-title">Note</p>
-      <p>This website is optimized for larger screens (e.g., laptops). For the best experience, please open it on a
-        bigger screen or use desktop site mode on your mobile device.</p>
+      <p>This website is not optimized for small screens (e.g., mobile phones). For the best experience, please use a larger screen (e.g., laptop) or rotate your mobile phone's screen.</p>
+        <img src="Images/rotate.gif" >
       <label for="note-checkbox"><span>OK</span></label>
       <input type="checkbox" id="note-checkbox">
     </div>
