--- a/frontend-discussions.html
+++ b/frontend-discussions.html
@@ -111,7 +111,7 @@
       <i class="fa-solid fa-pen-to-square"><span class="tooltip">Threads</span></i>
       <i class="fa-solid fa-bell"><span class="tooltip">Notification Settings</span></i>
       <i class="fa-solid fa-thumbtack"><span class="tooltip">Pinned Messages</span></i>
-      <label for="member-list-checkbox"><i class="fa-solid fa-user-large-slash"><span class="tooltip">Hide Member
+      <label for="member-list-checkbox"><i class="fa-solid fa-user-group"><span class="tooltip">Member
             List</span>
           <input type="checkbox" id="member-list-checkbox" checked style="display: none;">
         </i>
@@ -572,7 +572,7 @@
 
             <div class="member-overview">
               <div class="upper-overview">
-                <div class="member-img-overview"><img src="Images/pablo.webp" /></div>
+                <div class="member-img-overview"><img src="Images/pablo.jpg" /></div>
               </div>
               <div class="lower-overview">
                 <p class="member-name">Pablo</p>
