--- a/frontend-announcements.html
+++ b/frontend-announcements.html
@@ -19,7 +19,7 @@
   <section class="servers-section">
     <div class="pfp"><i class="fa-brands fa-discord"></i></div>
     <hr />
-    <div class="pfp pfp-active"><img src="Images/geeks.jpg" /></div>
+    <div class="pfp pfp-active"><img src="Images/server.jpg" /></div>
     <div class="pfp"><img src="Images/pablo.jpg" /></div>
     <div class="pfp"><img src="Images/pic1.jpg" /></div>
     <div class="pfp"><img src="Images/pic2.jpg" /></div>
@@ -33,7 +33,7 @@
   <section class="channels-section">
     <label for="server-menu-checkbox">
       <div class="server-name">
-        <span>Geeks Community</span>
+        <span>nerds' community</span>
         <i class="fa-solid fa-chevron-down fs-12"></i>
         <i class="fa-solid fa-xmark"></i>
         <input type="checkbox" id="server-menu-checkbox" />
@@ -62,7 +62,7 @@
           <div class="category-div">
             <span class="category">
               <i class="fa-solid fa-chevron-down"></i>
-              GEEKS COMMUNITY</span>
+              nerds' community</span>
             <span class="plus">+</span>
             <input type="checkbox" id="category-1-checkbox" checked />
           </div>
@@ -91,7 +91,7 @@
         <div class="user-info">
           <p class="user-name">amr</p>
           <div class="user-status">
-            <p class="user-status-text">Online</p>
+            <p class="user-status-text">idc anymore</p>
             <p>amrx64</p>
           </div>
         </div>
@@ -136,7 +136,7 @@
 
 
 
-          <div class="message" id="last-message">
+          <div class="message">
             <div class="message-icons">
               <i class="fa-solid fa-face-smile"></i>
               <i class="fa-solid fa-reply"></i>
@@ -250,7 +250,7 @@
 
       <section class="members-section">
 
-        <p class="role-text">FRONTEND DEVELOPERS - 3</p>
+        <p class="role-text">FRONTEND DEVELOPERS - 2</p>
 
 
         <!-- amr -->
@@ -265,7 +265,7 @@
                 <p class="member-name">amr</p>
                 <p class="member-username">amrx64</p>
 
-                <p class="member-bio">afterall, all I needed was to get busy</p>
+                <p class="member-bio">hey there, tell me about your day. And remember that you are awesome</p>
                 <div class="roles">
                   <p class="role bf-orange">Admin</p>
                   <p class="role bf-yellow">Frontend Developers</p>
@@ -278,7 +278,7 @@
 
           <div class="member-info">
             <p class="member-name fc-orange">amr <i class="fa-solid fa-crown fs-12"></i></p>
-            <span class="member-status member-status-active">qué linda eres</span>
+            <span class="member-status member-status-active">idc anymore</span>
           </div>
         </div>
 
@@ -310,63 +310,7 @@
           </div>
         </div>
 
-
-        <!-- shahd -->
-        <div class="member-container">
-          <div class="member-img-container">
-            <div class="member-img member-idle"><img src="Images/shahd.jpg" /></div>
-
-            <div class="member-overview">
-              <div class="upper-overview" style="background-image:url('Images/owl.png') ;">
-                <div class="member-img-overview member-idle"><img src="Images/shahd.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">Shahd</p>
-                <p class="member-username">shahd221b</p>
-                <div class="matual">2 Mutual Friends &#x2022; 1 Matual Servers</div>
-                <p class="member-bio">Ick</p>
-                <div class="roles">
-                  <p class="role bf-yellow">Frontend Developers</p>
-                </div>
-                <input type="text" placeholder="Message @Shahd">
-              </div>
-            </div>
-          </div>
-
-          <div class="member-info">
-            <p class="member-name fc-yellow">Shahd</p>
-            <span class="member-status member-status-active">اللهم الخلاص</span>
-          </div>
-        </div>
-
-        <p class="role-text">OFFLINE - 6</p>
-
-        <!-- habiba -->
-        <div class="member-container member-offline">
-          <div class="member-img-container">
-            <div class="member-img"><img src="Images/habiba.jpg" /></div>
-            <div class="member-overview">
-              <div class="upper-overview">
-                <div class="member-img-overview"><img src="Images/habiba.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">Habiba</p>
-                <p class="member-username">boba_1875</p>
-                <div class="matual">1 Matual Servers</div>
-                <p class="member-bio"></p>
-                <div class="roles">
-                  <p class="role bf-yellow">Frontend Developers</p>
-                </div>
-                <input type="text" placeholder="Message @Habiba">
-              </div>
-            </div>
-          </div>
-
-          <div class="member-info">
-            <p class="member-name fc-yellow">Habiba</p>
-            <span class="member-status"></span>
-          </div>
-        </div>
+        <p class="role-text">OFFLINE - 2</p>
 
         <!-- mazen -->
         <div class="member-container member-offline">
@@ -423,102 +367,8 @@
           </div>
         </div>
 
-
-        <!-- mohamed -->
-        <div class="member-container member-offline">
-          <div class="member-img-container">
-            <div class="member-img"><img src="Images/mohamed.jpg" /></div>
-
-            <div class="member-overview">
-              <div class="upper-overview">
-                <div class="member-img-overview"><img src="Images/mohamed.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">Mohamed Mostafa</p>
-                <p class="member-username">mohamedmostafa_97539</p>
-                <div class="matual">2 Mutual Friends &#x2022; 1 Matual Servers</div>
-                <p class="member-bio"></p>
-                <div class="roles">
-                  <p class="role bf-yellow">Frontend Developers</p>
-                </div>
-                <input type="text" placeholder="Message @Mohamed Mostafa">
-              </div>
-            </div>
-          </div>
-
-          <div class="member-info">
-            <p class="member-name fc-yellow">Mohamed Mostafa</p>
-            <span class="member-status"></span>
-          </div>
-        </div>
-
-        <!-- sara -->
-        <div class="member-container member-offline">
-          <div class="member-img-container">
-            <div class="member-img"><img src="Images/sara.jpg" /></div>
-
-            <div class="member-overview">
-              <div class="upper-overview">
-                <div class="member-img-overview"><img src="Images/sara.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">Sara_Yasser</p>
-                <p class="member-username">sara_yasser.</p>
-                <div class="matual">1 Matual Servers</div>
-                <p class="member-bio"></p>
-                <div class="roles">
-                  <p class="role bf-yellow">Frontend Developers</p>
-                </div>
-                <input type="text" placeholder="Message @Sara_Yasser">
-              </div>
-            </div>
-          </div>
-
-          <div class="member-info">
-            <p class="member-name fc-yellow">Sara_Yasser</p>
-            <span class="member-status"></span>
-          </div>
-        </div>
-
-        <!-- pablo  -->
-        <div class="member-container member-offline">
-          <div class="member-img-container">
-            <div class="member-img"><img src="Images/pablo.jpg" /></div>
-
-            <div class="member-overview">
-              <div class="upper-overview">
-                <div class="member-img-overview"><img src="Images/pablo.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">Pablo</p>
-                <p class="member-username">pablo_64</p>
-                <div class="matual">1 Matual Servers</div>
-                <p class="member-bio"></p>
-                <div class="roles">
-                  <p class="role bf-yellow">Frontend Developers</p>
-                </div>
-                <input type="text" placeholder="Message @Pablo">
-              </div>
-            </div>
-          </div>
-
-          <div class="member-info">
-            <p class="member-name fc-yellow">Pablo</p>
-            <span class="member-status"></span>
-          </div>
-        </div>
-
-
-
-
-
-
-
-
-
-
-
       </section>
+
 
 
     </div>
