--- a/index.html
+++ b/index.html
@@ -334,119 +334,135 @@
 
 
         <!-- amr -->
-        <div class="member-container">
-          <div class="member-img-container ">
-            <div class="member-img member-online"><img src="Images/amr.jpg" /></div>
-            <div class="member-overview">
-              <div class="upper-overview" style="background-image: url('Images/amr-back.jpg'); ">
-                <div class="member-img-overview member-online"><img src="Images/amr.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">amr</p>
-                <p class="member-username">amrx64</p>
+        <label for="focus-button1">
+          <div class="member-container">
 
-                <p class="member-bio">hey there, tell me about your day. And remember that you are awesome</p>
-                <div class="roles">
-                  <p class="role bf-orange">Admin</p>
-                  <p class="role bf-yellow">Frontend Developers</p>
+            <div class="member-img-container ">
+              <div class="member-img member-online"><img src="Images/amr.jpg" /></div>
+              <div class="member-overview">
+                <div class="upper-overview" style="background-image: url('Images/amr-back.jpg'); ">
+                  <div class="member-img-overview member-online"><img src="Images/amr.jpg" /></div>
                 </div>
-                <button><i class="fa-solid fa-pen"></i> Edit Profile</button>
+                <div class="lower-overview">
+                  <p class="member-name">amr</p>
+                  <p class="member-username">amrx64</p>
+
+                  <p class="member-bio">hey there, tell me about your day. And remember that you are awesome</p>
+                  <div class="roles">
+                    <p class="role bf-orange">Admin</p>
+                    <p class="role bf-yellow">Frontend Developers</p>
+                  </div>
+                  <button><i class="fa-solid fa-pen"></i> Edit Profile</button>
+                </div>
               </div>
+
             </div>
+
+            <div class="member-info">
+              <p class="member-name fc-orange">amr <i class="fa-solid fa-crown fs-12"></i></p>
+              <span class="member-status member-status-active">idc anymore</span>
+            </div>
+            <input type="text" id="focus-button1">
+
           </div>
-
-
-          <div class="member-info">
-            <p class="member-name fc-orange">amr <i class="fa-solid fa-crown fs-12"></i></p>
-            <span class="member-status member-status-active">idc anymore</span>
-          </div>
-        </div>
-
+        </label>
 
         <!-- moamen -->
-        <div class="member-container">
-          <div class="member-img-container">
-            <div class="member-img member-online-phone"><img src="Images/moamen.jpg" /></div>
-            <div class="member-overview">
-              <div class="upper-overview">
-                <div class="member-img-overview member-online"><img src="Images/moamen.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">Moamen</p>
-                <p class="member-username">moamen7halaf</p>
-                <div class="matual">2 Mutual Friends &#x2022; 1 Matual Servers</div>
-                <p class="member-bio">https://github.com/Moamen-Khalaf</p>
-                <div class="roles">
-                  <p class="role bf-yellow">Frontend Developers</p>
+        <label for="focus-button2">
+          <div class="member-container">
+            <div class="member-img-container">
+              <div class="member-img member-online-phone"><img src="Images/moamen.jpg" /></div>
+              <div class="member-overview">
+                <div class="upper-overview">
+                  <div class="member-img-overview member-online"><img src="Images/moamen.jpg" /></div>
                 </div>
-                <input type="text" placeholder="Message @Moamen">
+                <div class="lower-overview">
+                  <p class="member-name">Moamen</p>
+                  <p class="member-username">moamen7halaf</p>
+                  <div class="matual">2 Mutual Friends &#x2022; 1 Matual Servers</div>
+                  <p class="member-bio">https://github.com/Moamen-Khalaf</p>
+                  <div class="roles">
+                    <p class="role bf-yellow">Frontend Developers</p>
+                  </div>
+                  <input type="text" placeholder="Message @Moamen">
+                </div>
               </div>
+
             </div>
-          </div>
 
-          <div class="member-info">
-            <p class="member-name fc-yellow">Moamen</p>
-            <span class="member-status">اللي مش هيحل هيتفلتر</span>
+            <div class="member-info">
+              <p class="member-name fc-yellow">Moamen</p>
+              <span class="member-status">اللي مش هيحل هيتفلتر</span>
+            </div>              <input type="text" id="focus-button2">
           </div>
-        </div>
+        </label>
 
-        <p class="role-text">OFFLINE - 2</p>
+        <p class="role-text">
+          OFFLINE - 2 
+        </p>
 
         <!-- mazen -->
-        <div class="member-container member-offline">
-          <div class="member-img-container">
-            <div class="member-img"><img src="Images/mazen.jpg" /></div>
-            <div class="member-overview">
-              <div class="upper-overview">
-                <div class="member-img-overview"><img src="Images/mazen.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">mazen_3lwany</p>
-                <p class="member-username">mazen_3lwany</p>
-                <div class="matual">2 Mutual Friends &#x2022; 1 Matual Servers</div>
-                <p class="member-bio"></p>
-                <div class="roles">
-                  <p class="role bf-yellow">Frontend Developers</p>
+        <label for="focus-button3">
+          <div class="member-container member-offline">
+            <div class="member-img-container">
+              <div class="member-img"><img src="Images/mazen.jpg" /></div>
+              <div class="member-overview">
+                <div class="upper-overview">
+                  <div class="member-img-overview"><img src="Images/mazen.jpg" /></div>
                 </div>
-                <input type="text" placeholder="Message @mazen_3lwany">
+                <div class="lower-overview">
+                  <p class="member-name">mazen_3lwany</p>
+                  <p class="member-username">mazen_3lwany</p>
+                  <div class="matual">2 Mutual Friends &#x2022; 1 Matual Servers</div>
+                  <p class="member-bio"></p>
+                  <div class="roles">
+                    <p class="role bf-yellow">Frontend Developers</p>
+                  </div>
+                  <input type="text" placeholder="Message @mazen_3lwany">
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="member-info">
-            <p class="member-name fc-yellow">mazen_3lwany</p>
-            <span class="member-status"></span>
+            <div class="member-info">
+              <p class="member-name fc-yellow">mazen_3lwany</p>
+              <span class="member-status"></span>
+            </div>
+
+            <input type="text" id="focus-button3">
           </div>
-        </div>
+        </label>
+
 
         <!-- moatasem -->
-        <div class="member-container member-offline">
-          <div class="member-img-container">
-            <div class="member-img "><img src="Images/moatasem.jpg" /></div>
+        <label for="focus-button4">
+          <div class="member-container member-offline">
+            <div class="member-img-container">
+              <div class="member-img "><img src="Images/moatasem.jpg" /></div>
 
-            <div class="member-overview">
-              <div class="upper-overview">
-                <div class="member-img-overview"><img src="Images/moatasem.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">Moatasem</p>
-                <p class="member-username">moatasem2569</p>
-                <div class="matual">5 Mutual Friends &#x2022; 2 Matual Servers</div>
-                <p class="member-bio"></p>
-                <div class="roles">
-                  <p class="role bf-yellow">Frontend Developers</p>
+              <div class="member-overview">
+                <div class="upper-overview">
+                  <div class="member-img-overview"><img src="Images/moatasem.jpg" /></div>
                 </div>
-                <input type="text" placeholder="Message @Moatasem">
+                <div class="lower-overview">
+                  <p class="member-name">Moatasem</p>
+                  <p class="member-username">moatasem2569</p>
+                  <div class="matual">5 Mutual Friends &#x2022; 2 Matual Servers</div>
+                  <p class="member-bio"></p>
+                  <div class="roles">
+                    <p class="role bf-yellow">Frontend Developers</p>
+                  </div>
+                  <input type="text" placeholder="Message @Moatasem">
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="member-info">
-            <p class="member-name fc-yellow">Moatasem</p>
-            <span class="member-status"></span>
+            <div class="member-info">
+              <p class="member-name fc-yellow">Moatasem</p>
+              <span class="member-status"></span>
+            </div>
+            <input type="text" id="focus-button4">
           </div>
-        </div>
-
+        </label>
       </section>
 
 
