--- a/off-topic.html
+++ b/off-topic.html
@@ -454,7 +454,7 @@
               <p class="member-name fc-orange">amr <i class="fa-solid fa-crown fs-12"></i></p>
               <span class="member-status member-status-active">idc anymore</span>
             </div>
-            <input type="text" id="focus-button1">
+            <input type="text" id="focus-button1" class="focus-button">
 
           </div>
         </label>
@@ -485,12 +485,13 @@
             <div class="member-info">
               <p class="member-name fc-yellow">Moamen</p>
               <span class="member-status">اللي مش هيحل هيتفلتر</span>
-            </div>              <input type="text" id="focus-button2">
+            </div>
+            <input type="text" id="focus-button2" class="focus-button">
           </div>
         </label>
 
         <p class="role-text">
-          OFFLINE - 2 
+          OFFLINE - 2
         </p>
 
         <!-- mazen -->
@@ -520,7 +521,7 @@
               <span class="member-status"></span>
             </div>
 
-            <input type="text" id="focus-button3">
+            <input type="text" id="focus-button3" class="focus-button">
           </div>
         </label>
 
@@ -552,7 +553,7 @@
               <p class="member-name fc-yellow">Moatasem</p>
               <span class="member-status"></span>
             </div>
-            <input type="text" id="focus-button4">
+            <input type="text" id="focus-button4" class="focus-button">
           </div>
         </label>
       </section>
