--- a/frontend-discussions.html
+++ b/frontend-discussions.html
@@ -367,7 +367,7 @@
               <p class="member-name fc-orange">amr <i class="fa-solid fa-crown fs-12"></i></p>
               <span class="member-status member-status-active">idc anymore</span>
             </div>
-            <input type="text" id="focus-button1" class="focus-button">
+            <input type="checkbox" id="focus-button1" class="focus-button">
 
           </div>
         </label>
@@ -399,7 +399,7 @@
               <p class="member-name fc-yellow">Moamen</p>
               <span class="member-status">اللي مش هيحل هيتفلتر</span>
             </div>
-            <input type="text" id="focus-button2" class="focus-button">
+            <input type="checkbox" id="focus-button2" class="focus-button">
           </div>
         </label>
 
@@ -434,7 +434,7 @@
               <span class="member-status"></span>
             </div>
 
-            <input type="text" id="focus-button3" class="focus-button">
+            <input type="checkbox" id="focus-button3" class="focus-button">
           </div>
         </label>
 
@@ -466,7 +466,7 @@
               <p class="member-name fc-yellow">Moatasem</p>
               <span class="member-status"></span>
             </div>
-            <input type="text" id="focus-button4" class="focus-button">
+            <input type="checkbox" id="focus-button4" class="focus-button">
           </div>
         </label>
       </section>
