--- a/frontend-announcements.html
+++ b/frontend-announcements.html
@@ -282,7 +282,7 @@
               <p class="member-name fc-orange">amr <i class="fa-solid fa-crown fs-12"></i></p>
               <span class="member-status member-status-active">idc anymore</span>
             </div>
-            <input type="text" id="focus-button1" class="focus-button">
+            <input type="checkbox" id="focus-button1" class="focus-button">
 
           </div>
         </label>
@@ -314,7 +314,7 @@
               <p class="member-name fc-yellow">Moamen</p>
               <span class="member-status">اللي مش هيحل هيتفلتر</span>
             </div>
-            <input type="text" id="focus-button2" class="focus-button">
+            <input type="checkbox" id="focus-button2" class="focus-button">
           </div>
         </label>
 
@@ -349,7 +349,7 @@
               <span class="member-status"></span>
             </div>
 
-            <input type="text" id="focus-button3" class="focus-button">
+            <input type="checkbox" id="focus-button3" class="focus-button">
           </div>
         </label>
 
@@ -381,7 +381,7 @@
               <p class="member-name fc-yellow">Moatasem</p>
               <span class="member-status"></span>
             </div>
-            <input type="text" id="focus-button4" class="focus-button">
+            <input type="checkbox" id="focus-button4" class="focus-button">
           </div>
         </label>
       </section>
