Messages Feature (JS)

--- a/frontend-discussions.html
+++ b/frontend-discussions.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="Styles/Servers.css" />
   <link rel="stylesheet" href="Styles/Channels.css" />
   <link rel="stylesheet" href="Styles/Main.css" />
-  <link rel="stylesheet" href="Styles/Members.css" />
+
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -67,8 +67,8 @@
             <input type="checkbox" id="category-1-checkbox" checked />
           </div>
         </label>
-        <a class="channels" href="index.html#last-message"># community-announcements</a>
-        <a class="channels" href="off-topic.html#last-message"># off-topic-discussions</a>
+        <a class="channels" href="index.html"># community-announcements</a>
+        <a class="channels" href="off-topic.html"># off-topic-discussions</a>
       </div>
 
       <div class="sub-channels-section">
@@ -80,19 +80,19 @@
             <input type="checkbox" id="category-2-checkbox" checked />
           </div>
         </label>
-        <a class="channels" href="frontend-announcements.html#last-message"># frontend-announcements</a>
-        <a class="channels channels-active" href="frontend-discussions.html#last-message"># frontend-discussions</a>
+        <a class="channels" href="frontend-announcements.html"># frontend-announcements</a>
+        <a class="channels channels-active" href="frontend-discussions.html"># frontend-discussions</a>
       </div>
     </div>
 
     <div class="user-div">
       <div class="user-overview">
-        <div class="user-img-div"><img src="Images/amr.jpg" /></div>
+        <div class="user-img-div"><img src="Images/moamen.jpg" id="user-img"/></div>
         <div class="user-info">
-          <p class="user-name">amr</p>
+          <p id="user-name">Moamen</p>
           <div class="user-status">
-            <p class="user-status-text">idc anymore</p>
-            <p>amrx64</p>
+            <p class="user-status-text">Online</p>
+            <p>moamen7halaf</p>
           </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
 
       <section class="messages-section">
 
-        <div class="chat">
+        <div class="chat" id="chat">
 
           <div class="chat-header">
             <div class="chat-hash">#</div>
@@ -208,7 +208,7 @@
               </div>
               <div class="message-reactions">
                 <span>😂 2</span>
-                <span></span>
+
               </div>
             </div>
           </div>
@@ -236,7 +236,7 @@
             </div>
           </div>
 
-          <div class="message" id="last-message">
+          <div class="message" >
             <div class="message-reply"><img src="Images/moamen.jpg">
               <span class="message-reply-name">@moamen</span>
               <span class="message-reply-text">لازم انهاردة يعمرو ضروري</span>
@@ -264,48 +264,10 @@
               </div>
               <div class="message-reactions">
                 <span>😂 2</span>
-                <span></span>
+     
               </div>
             </div>
           </div>
-
-
-
-          <!-- <div class="message">
-            <div class="message-reply"><img src="/Images/moamen.jpg">
-              <span class="message-reply-name">@momenkhalaf</span>
-              <span class="message-reply-text">🔪😠اللي مش هيحل الشيت هيتفلتر</span>
-            </div>
-
-
-            <div class="message-icons">
-              <i class="fa-solid fa-face-smile"></i>
-              <i class="fa-solid fa-reply"></i>
-              <i class="fa-solid fa-share"></i>
-              <i class="fa-solid fa-ellipsis"></i>
-
-          </div>
-
-            <div class="message-img"><img src="Images/amr.jpg"></div>
-            <div class="message-content">
-              <div class="message-header">
-                <span class="message-name">amr</span>
-                <span class="message-date">25/7/2024 6:21 PM </span>
-              </div>
-              <div class="message-text">
-                <p>الـextension ده حلو أوي للـauto complete وبيعمل اقتراحات حلوة وممكن تخليه يعملك اللي انت عايزه في أي
-                  جزء من الكود وتقدر تخليه يشرحلك الكود بانه يضيف comments لكل جزء. حاسه هيفيد جدًا معانا بالذات مع
-                  الـjs </p>
-              </div>
-              <div class="message-media"><video src="Images/meme1.mp4" controls></video></div>
-              <div class="message-reactions">
-                <span>❤️ 4</span>
-                <span>👍 1</span>
-              </div>
-            </div>
-          </div> -->
-
-
 
 
         </div>
@@ -325,7 +287,7 @@
               </div>
             </i>
           </label>
-          <textarea placeholder="Message #off-topic-discussions"></textarea>
+                   <input placeholder="Message #off-topic-discussions" id="message-input">
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
@@ -473,7 +435,8 @@
 
 
     </div>
-  </section>
+  </section>  <script src="Script/Message.js"></script>
+
 </body>
 
 </html>
