--- a/frontend-announcements.html
+++ b/frontend-announcements.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="Styles/Servers.css" />
   <link rel="stylesheet" href="Styles/Channels.css" />
   <link rel="stylesheet" href="Styles/Main.css" />
-  <link rel="stylesheet" href="Styles/Members.css" />
+
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -67,8 +67,8 @@
             <input type="checkbox" id="category-1-checkbox" checked />
           </div>
         </label>
-        <a class="channels" href="index.html#last-message"># community-announcements</a>
-        <a class="channels" href="off-topic.html#last-message"># off-topic-discussions</a>
+        <a class="channels" href="index.html"># community-announcements</a>
+        <a class="channels" href="off-topic.html"># off-topic-discussions</a>
       </div>
 
       <div class="sub-channels-section">
@@ -80,16 +80,16 @@
             <input type="checkbox" id="category-2-checkbox" checked />
           </div>
         </label>
-        <a class="channels channels-active" href="frontend-announcements.html#last-message"># frontend-announcements</a>
-        <a class="channels" href="frontend-discussions.html#last-message" ># frontend-discussions</a>
+        <a class="channels channels-active" href="frontend-announcements.html"># frontend-announcements</a>
+        <a class="channels" href="frontend-discussions.html"># frontend-discussions</a>
       </div>
     </div>
 
     <div class="user-div">
       <div class="user-overview">
-        <div class="user-img-div"><img src="Images/amr.jpg" /></div>
+        <div class="user-img-div"><img src="Images/amr.jpg" id="user-img"/></div>
         <div class="user-info">
-          <p class="user-name">amr</p>
+          <p id="user-name">amr</p>
           <div class="user-status">
             <p class="user-status-text">idc anymore</p>
             <p>amrx64</p>
@@ -125,7 +125,7 @@
 
       <section class="messages-section">
 
-        <div class="chat">
+        <div class="chat" id="chat">
 
           <div class="chat-header">
             <div class="chat-hash">#</div>
@@ -158,7 +158,7 @@
               </div>
             </div>
           </div>
-          <div class="message" id="last-message">
+          <div class="message">
 
             <div class="message-icons">
               <i class="fa-solid fa-face-smile"></i>
@@ -182,9 +182,9 @@
               </div>
             </div>
           </div>
- 
 
-        
+
+
 
           <!-- <div class="message">
             <div class="message-reply"><img src="/Images/moamen.jpg">
@@ -240,7 +240,7 @@
               </div>
             </i>
           </label>
-          <textarea placeholder="Message #off-topic-discussions"></textarea>
+          <input placeholder="Message #off-topic-discussions" id="message-input">
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
@@ -390,6 +390,8 @@
 
     </div>
   </section>
+  <script src="Script/Message.js"></script>
+
 </body>
 
 </html>
