--- a/frontend-announcements.html
+++ b/frontend-announcements.html
@@ -87,7 +87,7 @@
 
     <div class="user-div">
       <div class="user-overview">
-        <div class="user-img-div"><img src="Images/amr.jpg" id="user-img"/></div>
+        <div class="user-img-div"><img src="Images/amr.jpg" id="user-img" /></div>
         <div class="user-info">
           <p id="user-name">amr</p>
           <div class="user-status">
@@ -229,7 +229,8 @@
 
           <label for="#plus-checkbox">
             <i class="fa-solid fa-circle-plus plus-button">
-              <input type="checkbox" id="#plus-checkbox" />
+              <input type="checkbox" id="#plus-checkbox" /> <button style="display: none;"></button>
+
               <div class="plus-menu">
                 <p><i class="fa-solid fa-file-arrow-up"></i>Upload a File</p>
                 <p><i class="fa-solid fa-pen-to-square"></i>Create Thread</p>
