--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
             </i>
           </label>
           <input placeholder="Message #off-topic-discussions" id="message-input">
+          <button style="display: none;"></button>
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
