--- a/frontend-discussions.html
+++ b/frontend-discussions.html
@@ -276,7 +276,8 @@
 
           <label for="#plus-checkbox">
             <i class="fa-solid fa-circle-plus plus-button">
-              <input type="checkbox" id="#plus-checkbox" />
+              <input type="checkbox" id="#plus-checkbox" />          <button style="display: none;"></button>
+
               <div class="plus-menu">
                 <p><i class="fa-solid fa-file-arrow-up"></i>Upload a File</p>
                 <p><i class="fa-solid fa-pen-to-square"></i>Create Thread</p>
