--- a/off-topic.html
+++ b/off-topic.html
@@ -377,7 +377,8 @@
               </div>
             </i>
           </label>
-          <input placeholder="Message #off-topic-discussions" id="message-input">
+          <input placeholder="Message #off-topic-discussions" id="message-input">          <button style="display: none;"></button>
+
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
