--- a/frontend-announcements.html
+++ b/frontend-announcements.html
@@ -229,7 +229,7 @@
 
           <label for="#plus-checkbox">
             <i class="fa-solid fa-circle-plus plus-button">
-              <input type="checkbox" id="#plus-checkbox" /> <button style="display: none;"></button>
+              <input type="checkbox" id="#plus-checkbox" /> <button style="position:fixed; top:-100px;"></button>
 
               <div class="plus-menu">
                 <p><i class="fa-solid fa-file-arrow-up"></i>Upload a File</p>
