--- a/frontend-discussions.html
+++ b/frontend-discussions.html
@@ -87,7 +87,7 @@
 
     <div class="user-div">
       <div class="user-overview">
-        <div class="user-img-div"><img src="Images/moamen.jpg" id="user-img"/></div>
+        <div class="user-img-div"><img src="Images/moamen.jpg" id="user-img" /></div>
         <div class="user-info">
           <p id="user-name">Moamen</p>
           <div class="user-status">
@@ -236,7 +236,7 @@
             </div>
           </div>
 
-          <div class="message" >
+          <div class="message">
             <div class="message-reply"><img src="Images/moamen.jpg">
               <span class="message-reply-name">@moamen</span>
               <span class="message-reply-text">لازم انهاردة يعمرو ضروري</span>
@@ -264,7 +264,7 @@
               </div>
               <div class="message-reactions">
                 <span>😂 2</span>
-     
+
               </div>
             </div>
           </div>
@@ -276,7 +276,8 @@
 
           <label for="#plus-checkbox">
             <i class="fa-solid fa-circle-plus plus-button">
-              <input type="checkbox" id="#plus-checkbox" />          <button style="display: none;"></button>
+              <input type="checkbox" id="#plus-checkbox" /> 
+              <button style="position:fixed; top:-100px;"></button>
 
               <div class="plus-menu">
                 <p><i class="fa-solid fa-file-arrow-up"></i>Upload a File</p>
@@ -288,7 +289,7 @@
               </div>
             </i>
           </label>
-                   <input placeholder="Message #off-topic-discussions" id="message-input">
+          <input placeholder="Message #off-topic-discussions" id="message-input">
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
@@ -436,7 +437,8 @@
 
 
     </div>
-  </section>  <script src="Script/Message.js"></script>
+  </section>
+  <script src="Script/Message.js"></script>
 
 </body>
 
