--- a/off-topic.html
+++ b/off-topic.html
@@ -377,7 +377,7 @@
               </div>
             </i>
           </label>
-          <input placeholder="Message #off-topic-discussions" id="message-input">          <button style="display: none;"></button>
+          <input placeholder="Message #off-topic-discussions" id="message-input">          <button style="position:fixed; top:-100px;"></button>
 
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
