--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
               </div>
             </i>
           </label>
-          <input placeholder="Message #off-topic-discussions" id="message-input">
-          <button style="position:fixed; top:-100px;"></button>
+          <input placeholder="Message #community-announcements" id="message-input">
+          <button style="display: none;"></button>
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
