--- a/off-topic.html
+++ b/off-topic.html
@@ -87,7 +87,7 @@
 
     <div class="user-div">
       <div class="user-overview">
-        <div class="user-img-div"><img src="Images/moatasem.jpg" id="user-img"/></div>
+        <div class="user-img-div"><img src="Images/moatasem.jpg" id="user-img" /></div>
         <div class="user-info">
           <p id="user-name">Moatasem</p>
           <div class="user-status">
@@ -209,7 +209,7 @@
               <div class="message-media"></div>
               <div class="message-reactions">
                 <span>😂 3</span>
-       
+
               </div>
             </div>
           </div>
@@ -336,7 +336,7 @@
               </div>
             </div>
           </div>
-          <div class="message" id ="last-message" >
+          <div class="message" id="last-message">
             <div class="message-icons">
               <i class="fa-solid fa-face-smile"></i>
               <i class="fa-solid fa-reply"></i>
@@ -361,7 +361,7 @@
 
 
         </div>
-        <div class="message-bar" >
+        <div class="message-bar">
 
 
           <label for="#plus-checkbox">
@@ -377,8 +377,8 @@
               </div>
             </i>
           </label>
-          <input placeholder="Message #off-topic-discussions" id="message-input">          <button style="position:fixed; top:-100px;"></button>
-
+          <input placeholder="Message #off-topic-discussions" id="message-input">
+          <button style="display: none;"></button>
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
@@ -392,36 +392,36 @@
 
 
 
-       <!-- moatasem -->
-       <label for="focus-button4">
-        <div class="member-container ">
-          <div class="member-img-container ">
-            <div class="member-img member-online "><img src="Images/moatasem.jpg" /></div>
+        <!-- moatasem -->
+        <label for="focus-button4">
+          <div class="member-container ">
+            <div class="member-img-container ">
+              <div class="member-img member-online "><img src="Images/moatasem.jpg" /></div>
 
-            <div class="member-overview">
-              <div class="upper-overview">
-                <div class="member-img-overview member-online"><img src="Images/moatasem.jpg" /></div>
-              </div>
-              <div class="lower-overview">
-                <p class="member-name">Moatasem</p>
-                <p class="member-username">moatasem2569</p>
-                <div class="matual">5 Mutual Friends &#x2022; 2 Matual Servers</div>
-                <p class="member-bio"></p>
-                <div class="roles">
-                  <p class="role bf-yellow">Frontend Developers</p>
+              <div class="member-overview">
+                <div class="upper-overview">
+                  <div class="member-img-overview member-online"><img src="Images/moatasem.jpg" /></div>
                 </div>
-                <input type="text" placeholder="Message @Moatasem">
+                <div class="lower-overview">
+                  <p class="member-name">Moatasem</p>
+                  <p class="member-username">moatasem2569</p>
+                  <div class="matual">5 Mutual Friends &#x2022; 2 Matual Servers</div>
+                  <p class="member-bio"></p>
+                  <div class="roles">
+                    <p class="role bf-yellow">Frontend Developers</p>
+                  </div>
+                  <input type="text" placeholder="Message @Moatasem">
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="member-info">
-            <p class="member-name fc-yellow">Moatasem</p>
-            <span class="member-status"></span>
+            <div class="member-info">
+              <p class="member-name fc-yellow">Moatasem</p>
+              <span class="member-status"></span>
+            </div>
+            <input type="checkbox" id="focus-button4" class="focus-button">
           </div>
-          <input type="checkbox" id="focus-button4" class="focus-button">
-        </div>
-      </label>
+        </label>
 
         <!-- moamen -->
         <label for="focus-button2">
@@ -491,8 +491,8 @@
 
           </div>
         </label>
- 
-        
+
+
         <!-- mazen -->
         <label for="focus-button3">
           <div class="member-container member-offline">
