--- a/frontend-discussions.html
+++ b/frontend-discussions.html
@@ -277,7 +277,7 @@
           <label for="#plus-checkbox">
             <i class="fa-solid fa-circle-plus plus-button">
               <input type="checkbox" id="#plus-checkbox" /> 
-              <button style="position:fixed; top:-100px;"></button>
+             
 
               <div class="plus-menu">
                 <p><i class="fa-solid fa-file-arrow-up"></i>Upload a File</p>
@@ -289,7 +289,8 @@
               </div>
             </i>
           </label>
-          <input placeholder="Message #off-topic-discussions" id="message-input">
+          <input placeholder="Message #frontend-discussions" id="message-input">
+          <button style="display: none;"></button>
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
